// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketplaceAppPage should match a snapshot when has an error 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-intent-danger el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          Something went wrong fetching the app details. Please refresh this page.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-intent-danger el-persistent-notification"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="el-pn-content"
      >
        Something went wrong fetching the app details. Please refresh this page.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MarketplaceAppPage should match a snapshot when has data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Apps
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Marketplace Visibility and Installation Management
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
          </p>
          <button
            class="el-mb5 el-intent-primary el-button"
            type="button"
          >
            Back To Apps
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-critical el-button-has-right-chevron el-button"
            type="button"
          >
            View Listing
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <div
            class="el-flex-justify-between el-flex-container"
          >
            <h1
              class="el-title"
            >
              SOME_NAME
               - 
              Geo Diary
            </h1>
          </div>
          <h2
            class="el-subtitle"
          >
            Pricing Information
          </h2>
          <div
            class="el-mb11"
          >
            <p
              class="el-has-grey-text el-body-text"
            >
              Reapit Ltd
               have specified there is no cost for using this App/Integration.
            </p>
          </div>
          <h2
            class="el-subtitle"
          >
            Data Permissions
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            By installing this app, you are granting the following permissions to your data:
          </p>
          <div
            class="el-mb11 el-grid"
          >
            <div
              class="el-col"
            >
              Information about your organisation
            </div>
            <div
              class="el-col"
            >
              Names/email addresses of your users
            </div>
            <div
              class="el-col"
            >
              Read applicants
            </div>
            <div
              class="el-col"
            >
              Read appointments
            </div>
            <div
              class="el-col"
            >
              Write appointments
            </div>
            <div
              class="el-col"
            >
              Read contacts
            </div>
            <div
              class="el-col"
            >
              Read landlords
            </div>
            <div
              class="el-col"
            >
              Read negotiators
            </div>
            <div
              class="el-col"
            >
              Read offers
            </div>
            <div
              class="el-col"
            >
              Read offices
            </div>
            <div
              class="el-col"
            >
              Read properties
            </div>
            <div
              class="el-col"
            >
              Read tenancies
            </div>
            <div
              class="el-col"
            >
              Read vendors
            </div>
            <div
              class="el-col"
            >
              Read Referrals
            </div>
          </div>
          <h2
            class="el-subtitle"
          >
            Application Visibility
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            By default, all apps will be visible to all offices/users within your organisation. If you wish to hide an app from the Marketplace, please deselect. Hidden apps (apps that have been deselected) will not be visible in the Marketplace to any offices/users inside of your organisation.
          </p>
          <div
            class="el-mb11 el-input-group"
          >
            <input
              checked=""
              class="el-input"
              id="cfbe6f29-4003-4648-aa5a-8eb777bd606e"
              type="checkbox"
            />
            <label
              class="el-label"
              for="cfbe6f29-4003-4648-aa5a-8eb777bd606e"
            >
              Visible
            </label>
          </div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-subtitle"
            >
              Current Installations
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              This app is not currently installed. You can either install for your organisation or specific office groups in the section below.
            </p>
          </div>
          <h2
            class="el-subtitle"
          >
            Installation
          </h2>
          <p
            class="el-has-grey-text el-has-section-margin el-body-text"
          >
            Please select the type of installation you require for this app:
          </p>
          <div
            class="el-form-layout-has-margin el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-mb5 el-input-group"
              >
                <input
                  class="el-input"
                  id="WHOLE_ORG"
                  type="checkbox"
                />
                <label
                  class="el-label"
                  for="WHOLE_ORG"
                >
                  Install for the whole of your organisation
                </label>
              </div>
              <p
                class="el-body-text"
              >
                This will grant the app access to all data for all users and offices across your organisation
              </p>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-mb5 el-input-group"
              >
                <input
                  class="el-input"
                  id="SPECIFIC_OFFICE_GROUPS"
                  type="checkbox"
                />
                <label
                  class="el-label"
                  for="SPECIFIC_OFFICE_GROUPS"
                >
                  Install for specific office groups
                </label>
              </div>
              <p
                class="el-body-text"
              >
                This will grant the app access to only data for the specific offices inside of each office group
              </p>
            </div>
          </div>
          <div
            class="el-mb7 el-button-group"
          >
            <div
              class="el-button-group-align-right el-button-group-inner"
            >
              <button
                class="el-intent-critical el-button-has-right-chevron el-button-size2 el-button"
                disabled=""
              >
                Save
                <div
                  class="el-button-loader"
                />
              </button>
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Apps
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Marketplace Visibility and Installation Management
        </h2>
        <p
          class="el-has-grey-text el-body-text"
        >
          To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
        </p>
        <button
          class="el-mb5 el-intent-primary el-button"
          type="button"
        >
          Back To Apps
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-critical el-button-has-right-chevron el-button"
          type="button"
        >
          View Listing
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <div
          class="el-flex-justify-between el-flex-container"
        >
          <h1
            class="el-title"
          >
            SOME_NAME
             - 
            Geo Diary
          </h1>
        </div>
        <h2
          class="el-subtitle"
        >
          Pricing Information
        </h2>
        <div
          class="el-mb11"
        >
          <p
            class="el-has-grey-text el-body-text"
          >
            Reapit Ltd
             have specified there is no cost for using this App/Integration.
          </p>
        </div>
        <h2
          class="el-subtitle"
        >
          Data Permissions
        </h2>
        <p
          class="el-has-grey-text el-body-text"
        >
          By installing this app, you are granting the following permissions to your data:
        </p>
        <div
          class="el-mb11 el-grid"
        >
          <div
            class="el-col"
          >
            Information about your organisation
          </div>
          <div
            class="el-col"
          >
            Names/email addresses of your users
          </div>
          <div
            class="el-col"
          >
            Read applicants
          </div>
          <div
            class="el-col"
          >
            Read appointments
          </div>
          <div
            class="el-col"
          >
            Write appointments
          </div>
          <div
            class="el-col"
          >
            Read contacts
          </div>
          <div
            class="el-col"
          >
            Read landlords
          </div>
          <div
            class="el-col"
          >
            Read negotiators
          </div>
          <div
            class="el-col"
          >
            Read offers
          </div>
          <div
            class="el-col"
          >
            Read offices
          </div>
          <div
            class="el-col"
          >
            Read properties
          </div>
          <div
            class="el-col"
          >
            Read tenancies
          </div>
          <div
            class="el-col"
          >
            Read vendors
          </div>
          <div
            class="el-col"
          >
            Read Referrals
          </div>
        </div>
        <h2
          class="el-subtitle"
        >
          Application Visibility
        </h2>
        <p
          class="el-has-grey-text el-body-text"
        >
          By default, all apps will be visible to all offices/users within your organisation. If you wish to hide an app from the Marketplace, please deselect. Hidden apps (apps that have been deselected) will not be visible in the Marketplace to any offices/users inside of your organisation.
        </p>
        <div
          class="el-mb11 el-input-group"
        >
          <input
            checked=""
            class="el-input"
            id="cfbe6f29-4003-4648-aa5a-8eb777bd606e"
            type="checkbox"
          />
          <label
            class="el-label"
            for="cfbe6f29-4003-4648-aa5a-8eb777bd606e"
          >
            Visible
          </label>
        </div>
        <div
          class="el-mb11"
        >
          <h2
            class="el-subtitle"
          >
            Current Installations
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            This app is not currently installed. You can either install for your organisation or specific office groups in the section below.
          </p>
        </div>
        <h2
          class="el-subtitle"
        >
          Installation
        </h2>
        <p
          class="el-has-grey-text el-has-section-margin el-body-text"
        >
          Please select the type of installation you require for this app:
        </p>
        <div
          class="el-form-layout-has-margin el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-mb5 el-input-group"
            >
              <input
                class="el-input"
                id="WHOLE_ORG"
                type="checkbox"
              />
              <label
                class="el-label"
                for="WHOLE_ORG"
              >
                Install for the whole of your organisation
              </label>
            </div>
            <p
              class="el-body-text"
            >
              This will grant the app access to all data for all users and offices across your organisation
            </p>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-mb5 el-input-group"
            >
              <input
                class="el-input"
                id="SPECIFIC_OFFICE_GROUPS"
                type="checkbox"
              />
              <label
                class="el-label"
                for="SPECIFIC_OFFICE_GROUPS"
              >
                Install for specific office groups
              </label>
            </div>
            <p
              class="el-body-text"
            >
              This will grant the app access to only data for the specific offices inside of each office group
            </p>
          </div>
        </div>
        <div
          class="el-mb7 el-button-group"
        >
          <div
            class="el-button-group-align-right el-button-group-inner"
          >
            <button
              class="el-intent-critical el-button-has-right-chevron el-button-size2 el-button"
              disabled=""
            >
              Save
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MarketplaceAppPage should match a snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Apps
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Marketplace Visibility and Installation Management
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
          </p>
          <button
            class="el-mb5 el-intent-primary el-button"
            type="button"
          >
            Back To Apps
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-critical el-button-has-right-chevron el-button"
            type="button"
          >
            View Listing
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <div
            class="el-loader-container"
          >
            <div
              class="el-loader"
            >
              <div
                class="el-loader-moving-bar"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Apps
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Marketplace Visibility and Installation Management
        </h2>
        <p
          class="el-has-grey-text el-body-text"
        >
          To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
        </p>
        <button
          class="el-mb5 el-intent-primary el-button"
          type="button"
        >
          Back To Apps
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-critical el-button-has-right-chevron el-button"
          type="button"
        >
          View Listing
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MarketplaceAppPage should match a snapshot where no orgClientId exists 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Apps
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Marketplace Visibility and Installation Management
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
          </p>
          <div
            class="el-mb5"
          >
            <h2
              class="el-subtitle"
            >
              Organisations
            </h2>
            <p
              class="el-has-grey-text el-body-text"
            >
              You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
            </p>
            <div
              class="el-border-radius controls-container"
            >
              <div
                class="el-input-group"
              >
                <select
                  class="el-wfull el-select"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                  <option
                    value="value"
                  >
                    name
                  </option>
                </select>
                <label
                  class="el-label"
                  for="myId"
                >
                  Select Organisation
                </label>
              </div>
            </div>
          </div>
          <button
            class="el-mb5 el-intent-primary el-button"
            type="button"
          >
            Back To Apps
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-critical el-button-has-right-chevron el-button"
            type="button"
          >
            View Listing
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <div
            class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-pn-content"
            >
              No organisation selected. You need to select an organisation to view the app details.
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Apps
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Marketplace Visibility and Installation Management
        </h2>
        <p
          class="el-has-grey-text el-body-text"
        >
          To set the visibility of app in the Marketplace or manage installations, use the various sections on this page.
        </p>
        <div
          class="el-mb5"
        >
          <h2
            class="el-subtitle"
          >
            Organisations
          </h2>
          <p
            class="el-has-grey-text el-body-text"
          >
            You are an admin for multiple organisations - select from the list below for data specific to one of these organisations
          </p>
          <div
            class="el-border-radius controls-container"
          >
            <div
              class="el-input-group"
            >
              <select
                class="el-wfull el-select"
              >
                <option
                  value=""
                >
                  Please Select
                </option>
                <option
                  value="value"
                >
                  name
                </option>
                <option
                  value="value"
                >
                  name
                </option>
              </select>
              <label
                class="el-label"
                for="myId"
              >
                Select Organisation
              </label>
            </div>
          </div>
        </div>
        <button
          class="el-mb5 el-intent-primary el-button"
          type="button"
        >
          Back To Apps
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-critical el-button-has-right-chevron el-button"
          type="button"
        >
          View Listing
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No organisation selected. You need to select an organisation to view the app details.
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
